--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,7 @@
   "language": "Язык",
   "ru": "Русский",
   "en": "Английский",
-  "error-msg": "Произошла ошибка"
+  "error-msg": "Произошла ошибка",
+  "main-page": "Главная страница",
+  "welcome-page": "Начальная страница"
 }
