feat: init base routing with pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,6 @@
   "language": "Language",
   "ru": "Russian",
   "en": "English",
-  "error-msg": "Error happened"
+  "error-msg": "Error happened",
+  "welcome-msg": "Welcome page"
 }
