--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "language": "Язык",
   "ru": "Русский",
   "en": "Английский",
-  "error-msg": "Произошла ошибка"
+  "error-msg": "Произошла ошибка",
+  "welcome-msg": "Приветствунная страница"
 }
