fix: fix requests

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,6 @@
   "ru": "Russian",
   "en": "English",
   "error-msg": "Error happened",
-  "main-page": "Main page",
-  "welcome-page": "Welcome page"
+  "main-page": "Main",
+  "welcome-page": "Home"
 }
