feat: add auth form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,10 @@
   "ru": "Russian",
   "en": "English",
   "error-msg": "Error happened",
-  "welcome-msg": "Welcome page"
+  "welcome-msg": "Welcome page",
+  "validate-msg-enter-email": "Please enter your email",
+  "validate-msg-enter-password": "Please enter your password",
+  "validate-msg-email-not-valid": "Email is not valid",
+  "validate-msg-8-chars": "At least 8 chars",
+  "validate-msg-password-should-contain-letter-number-special": "Password should contain at least one letter, one number and one special character"
 }
