uncompleted: handle editor size changing

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,11 +8,11 @@
   "home": "Главная",
   "not-found": "Страница не найдена",
   "redirect": "Вернуться на главную страницу",
-  "q-var": "Переменные запроса",
+  "q-var": "Переменные",
   "http-head": "HTTP Заголовки",
   "schema": "Схема",
   "result": "Результат",
-  "queries": "Запросы",
+  "query": "Запрос",
   "language": "Язык",
   "ru": "Русский",
   "en": "Английский",
