--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,11 +8,11 @@
   "home": "Home",
   "not-found": "Page Not Found",
   "redirect": "Go back to main page",
-  "q-var": "Query variables",
+  "q-var": "Variables",
   "http-head": "HTTP Headers",
   "schema": "Schema",
   "result": "Result",
-  "queries": "Queries",
+  "query": "Query",
   "language": "Language",
   "ru": "Russian",
   "en": "English",
