refactor: change auth forms styles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "confirm-pass": "Confirm Password",
   "sign-in": "Sign-in",
   "sign-up": "Sign-up",
+  "sign-up-btn": "Sign-up",
   "home": "Home",
   "not-found": "Page Not Found",
   "redirect": "Go back to main page",
@@ -18,6 +19,8 @@
   "en": "English",
   "error-msg": "Error happened",
   "welcome-msg": "Welcome page",
+  "do-not-have-acc": "Don't have an account?",
+  "have-acc": "Already have an account?",
   "validate-msg-enter-email": "Please enter your email",
   "validate-msg-enter-password": "Please enter your password",
   "validate-msg-email-not-valid": "Email is not valid",
