--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,7 +4,8 @@
   "pass": "Пароль",
   "confirm-pass": "Повторите пароль",
   "sign-in": "Войти",
-  "sign-up": "Зарегистрироваться",
+  "sign-up": "Регистрация",
+  "sign-up-btn": "Зарегистрироваться",
   "home": "Главная",
   "not-found": "Страница не найдена",
   "redirect": "Вернуться на главную страницу",
@@ -18,6 +19,8 @@
   "en": "Английский",
   "error-msg": "Произошла ошибка",
   "welcome-msg": "Приветствунная страница",
+  "do-not-have-acc": "У Вас нет аккаунта?",
+  "have-acc": "Уже есть аккаунт?",
   "validate-msg-enter-email": "Пожалуйста, введите email",
   "validate-msg-enter-password": "Пожалуйста, введите password",
   "validate-msg-email-not-valid": "Введен не корректный email",
