feat: implement playground editor web design and basic functionality

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,9 +9,9 @@
   "not-found": "Page Not Found",
   "redirect": "Go back to main page",
   "q-var": "Variables",
-  "http-head": "HTTP Headers",
+  "http-head": "Headers",
   "schema": "Schema",
-  "result": "Result",
+  "response": "Response",
   "query": "Query",
   "language": "Language",
   "ru": "Russian",
