--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,9 +9,9 @@
   "not-found": "Страница не найдена",
   "redirect": "Вернуться на главную страницу",
   "q-var": "Переменные",
-  "http-head": "HTTP Заголовки",
+  "http-head": "Заголовки",
   "schema": "Схема",
-  "result": "Результат",
+  "response": "Ответ",
   "query": "Запрос",
   "language": "Язык",
   "ru": "Русский",
