--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,11 +21,13 @@
   "welcome-msg": "Приветствунная страница",
   "do-not-have-acc": "У Вас нет аккаунта?",
   "have-acc": "Уже есть аккаунт?",
-  "validate-msg-enter-email": "Пожалуйста, введите email",
-  "validate-msg-enter-password": "Пожалуйста, введите password",
-  "validate-msg-email-not-valid": "Введен не корректный email",
-  "validate-msg-8-chars": "Должно быть не менее 8 символов",
-  "validate-msg-password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, одно число и один специальный символ"
+  "form-validation": {
+    "enter-email": "Пожалуйста, введите email",
+    "enter-password": "Пожалуйста, введите password",
+    "email-not-valid": "Введен не корректный email",
+    "8-chars": "Должно быть не менее 8 символов",
+    "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, одно число и один специальный символ"
+  },
   "main-page": "Главная страница",
   "welcome-page": "Начальная страница"
 }
