fix: remove unnecessary classnames

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -28,6 +28,6 @@
     "8-chars": "Должно быть не менее 8 символов",
     "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, одно число и один специальный символ"
   },
-  "main-page": "Главная страница",
-  "welcome-page": "Начальная страница"
+  "main-page": "Главная",
+  "welcome-page": "Начальная"
 }
