fix: fix password-should-contain length

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,7 +26,7 @@
     "enter-password": "Please enter your password",
     "email-not-valid": "Email is not valid",
     "8-chars": "At least 8 chars",
-    "password-should-contain-letter-number-special": "Password should contain at least one letter, one number and one special character"
+    "password-should-contain-letter-number-special": "Password should contain at least 1 letter, 1 number and 1 special character"
   },
   "main-page": "Main",
   "welcome-page": "Home"
