--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,7 +26,7 @@
     "enter-password": "Пожалуйста, введите password",
     "email-not-valid": "Введен не корректный email",
     "8-chars": "Должно быть не менее 8 символов",
-    "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, одно число и один специальный символ"
+    "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, 1 число и 1 специальный символ"
   },
   "main-page": "Главная",
   "welcome-page": "Начальная"
