--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,6 +29,30 @@
     "8-chars": "Должно быть не менее 8 символов",
     "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, 1 число и 1 специальный символ"
   },
+  "developer-card": {
+    "ihar": {
+      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
+    },
+    "orygali": {
+      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
+    },
+    "stepan": {
+      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
+    }
+  },
   "main-page": "Главная",
-  "welcome-page": "Приветствие"
+  "welcome-page": "Приветствие",
+  "final-project": {
+    "name": "Итоговый проект",
+    "description": "Главная страница доступна только зарегистрированным пользователям."
+  },
+  "course": {
+    "name": "Курс: RS School. React.",
+    "description": "RS School - это образовательный проект, который проводит курсы по различным направлениям веб-разработки. Один из таких курсов - это курс по React. Курс предназначен для студентов RS School, которые прошли второй этап RS School и новых студентов с практическим опытом и знаниями JavaScript, TypeScript, Git, GitHub, CSS3 / HTML."
+  },
+  "project": {
+    "name": "Проект: GraphiQL.",
+    "description": "GraphiQL - это интерактивная среда разработки GraphQL в браузере. Она позволяет формировать запросы и исследовать схему GraphQL."
+  },
+  "developers": "Разработчики."
 }
