feat: add profile info

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,8 +33,8 @@
     "ihar": {
       "description": "I am Software Engineer. I like to invent, design, and create useful things or programs. I like computer games and I am crazy about computers and programming."
     },
-    "orygali": {
-      "description": "I am Software Engineer. I like to invent, design, and create useful things or programs. I like computer games and I am crazy about computers and programming."
+    "oryngali": {
+      "description": "Web Developer. Creative director in this project. Also a Jedi, Avenger, Jinchuuriki, Ascetic, Stoic, Perfectionist ..."
     },
     "stepan": {
       "description": "I am Software Engineer. I like to invent, design, and create useful things or programs. I like computer games and I am crazy about computers and programming."
