--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,8 +33,8 @@
     "ihar": {
       "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
     },
-    "orygali": {
-      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
+    "oryngali": {
+      "description": "Веб-разработчик. Креативный директор в этом проекте. Также Джедай, Мститель, Джинчурики, Аскет, Стоик, Перфекционист..."
     },
     "stepan": {
       "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
