feat: add stepan photo & desc

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -37,7 +37,7 @@
       "description": "Веб-разработчик. Креативный директор в этом проекте. Также Джедай, Мститель, Джинчурики, Аскет, Стоик, Перфекционист..."
     },
     "stepan": {
-      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
+      "description": "Веб-разработчик. Я стремлюсь разрабатывать и проектировать веб-сайты, которые передают профессионализм и стиль."
     }
   },
   "main-page": "Главная",
