--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,7 +37,7 @@
       "description": "Web Developer. Creative director in this project. Also a Jedi, Avenger, Jinchuuriki, Ascetic, Stoic, Perfectionist ..."
     },
     "stepan": {
-      "description": "I am Software Engineer. I like to invent, design, and create useful things or programs. I like computer games and I am crazy about computers and programming."
+      "description": "Web Developer. I aim to develop and design websites that convey professionalism and style."
     }
   },
   "main-page": "Main",
