--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,9 +3,9 @@
   "email": "Email",
   "pass": "Password",
   "confirm-pass": "Confirm Password",
-  "sign-in": "Sign-in",
-  "sign-up": "Sign-up",
-  "sign-out": "Sign-out",
+  "sign-in": "Log in",
+  "sign-up": "Sign up",
+  "sign-out": "Sign out",
   "sign-up-btn": "Sign-up",
   "home": "Home",
   "not-found": "Page Not Found",
