--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,7 +52,9 @@
   },
   "project": {
     "name": "Проект: GraphiQL.",
-    "description": "GraphiQL - это интерактивная среда разработки GraphQL в браузере. Она позволяет формировать запросы и исследовать схему GraphQL."
+    "description": "GraphiQL - это интерактивная среда разработки GraphQL в браузере. Она позволяет формировать запросы и исследовать схему GraphQL. Мы использовали публичный API \"Rick and Morty\""
   },
-  "developers": "Разработчики."
+  "developers": "Разработчики.",
+  "explore": "Начать изучение",
+  "user": "Пользователь"
 }
