--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -56,5 +56,6 @@
   },
   "developers": "Разработчики.",
   "explore": "Начать изучение",
-  "user": "Пользователь"
+  "user": "Пользователь",
+  "schema-error": "Не удалось получить схему"
 }
