feat: add error boundaries

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,5 +57,8 @@
   "developers": "Developers.",
   "explore": "Start exploring",
   "user": "User",
-  "schema-error": "Failed to get schema"
+  "schema-error": "Failed to get schema",
+  "error": "Error!",
+  "error-happened": "Something went wrong",
+  "refresh": "Reload Page"
 }
