--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -57,5 +57,8 @@
   "developers": "Разработчики.",
   "explore": "Начать изучение",
   "user": "Пользователь",
-  "schema-error": "Не удалось получить схему"
+  "schema-error": "Не удалось получить схему",
+  "error": "Ошибка!",
+  "error-happened": "Что-то пошло не так",
+  "refresh": "Обновить страницу"
 }
