--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,64 +1,61 @@
 {
-  "username": "Имя пользователя",
-  "email": "Электронная почта",
-  "pass": "Пароль",
-  "confirm-pass": "Повторите пароль",
-  "sign-in": "Войти",
-  "sign-up": "Регистрация",
-  "sign-out": "Выйти",
-  "sign-up-btn": "Зарегистрироваться",
-  "home": "Главная",
-  "not-found": "Страница не найдена",
-  "redirect": "Вернуться на главную страницу",
-  "q-var": "Переменные",
-  "http-head": "Заголовки",
-  "schema": "Схема",
-  "response": "Ответ",
-  "query": "Запрос",
-  "language": "Язык",
-  "ru": "Русский",
-  "en": "Английский",
-  "error-msg": "Произошла ошибка",
-  "welcome-msg": "Приветствунная страница",
-  "do-not-have-acc": "У Вас нет аккаунта?",
-  "have-acc": "Уже есть аккаунт?",
-  "form-validation": {
-    "enter-email": "Пожалуйста, введите email",
-    "enter-password": "Пожалуйста, введите password",
-    "email-not-valid": "Введен не корректный email",
-    "8-chars": "Должно быть не менее 8 символов",
-    "password-should-contain-letter-number-special": "Пароль должен содержать как минимум 1 букву, 1 число и 1 специальный символ"
+  "not-found": {
+    "page": "Страница не найдена",
+    "redirect": "Вернуться на главную страницу"
   },
-  "developer-card": {
-    "ihar": {
-      "description": "Я инженер-программист. Мне нравится изобретать, проектировать и создавать полезные вещи или программы. Я обожаю компьютерные игры и без ума от программирования."
-    },
-    "oryngali": {
-      "description": "Веб-разработчик. Креативный директор в этом проекте. Также Джедай, Мститель, Джинчурики, Аскет, Стоик, Перфекционист..."
-    },
-    "stepan": {
-      "description": "Веб-разработчик. Я стремлюсь разрабатывать и проектировать веб-сайты, которые передают профессионализм и стиль."
-    }
-  },
-  "main-page": "Главная",
-  "welcome-page": "Приветствие",
-  "final-project": {
-    "name": "Итоговый проект",
-    "description": "Главная страница доступна только зарегистрированным пользователям."
-  },
-  "course": {
-    "name": "Курс: RS School. React.",
-    "description": "RS School - это образовательный проект, который проводит курсы по различным направлениям веб-разработки. Один из таких курсов - это курс по React. Курс предназначен для студентов RS School, которые прошли второй этап RS School и новых студентов с практическим опытом и знаниями JavaScript, TypeScript, Git, GitHub, CSS3 / HTML."
-  },
-  "project": {
-    "name": "Проект: GraphiQL.",
-    "description": "GraphiQL - это интерактивная среда разработки GraphQL в браузере. Она позволяет формировать запросы и исследовать схему GraphQL. Мы использовали публичный API \"Rick and Morty\""
-  },
-  "developers": "Разработчики.",
-  "explore": "Начать изучение",
-  "user": "Пользователь",
-  "schema-error": "Не удалось получить схему",
+
   "error": "Ошибка!",
   "error-happened": "Что-то пошло не так",
-  "refresh": "Обновить страницу"
+  "refresh": "Обновить страницу",
+
+  "landing": {
+    "page": "Главная",
+    "start-button": "Начать",
+    "project": {
+      "name": "Проект: GraphiQL.",
+      "description": "GraphiQL - это интерактивная среда разработки GraphQL в браузере. Она позволяет формировать запросы и исследовать схему GraphQL. Мы использовали публичный API \"Rick and Morty\""
+    },
+    "developer-card": {
+      "oryngali": {
+        "description": "Веб-разработчик. Креативный директор в этом проекте. Также Джедай, Мститель, Джинчурики, Аскет, Стоик, Перфекционист..."
+      }
+    }
+  },
+
+  "studio": {
+    "page": "Студия",
+    "query-var": "Переменные",
+    "http-head": "Заголовки",
+    "schema": "Схема",
+    "response": "Ответ",
+    "query": "Запрос",
+    "schema-error": "Не удалось получить схему"
+  },
+
+  "auth": {
+    "login": "Войти",
+    "sign-up": "Регистрация",
+    "sign-out": "Выйти",
+    "user": "Пользователь",
+    "form": {
+      "email": "Электронная почта",
+      "password": "Пароль",
+      "confirm-pass": "Повторите пароль",
+      "have-account": "Уже есть аккаунт?",
+      "no-account": "Нет аккаунта?",
+      "validation": {
+        "empty-email": "Пожалуйста, введите email",
+        "empty-password": "Пожалуйста, введите password",
+        "invalid-email": "Введен не корректный email",
+        "pass-length": "Должно быть не менее 8 символов",
+        "pass-pattern": "Пароль должен содержать как минимум 1 букву, 1 число и 1 специальный символ"
+      }
+    }
+  },
+
+  "localization": {
+    "language": "Язык",
+    "ru": "Русский",
+    "en": "Английский"
+  }
 }
