refactor: change some routes naming

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,7 +33,7 @@
   },
 
   "auth": {
-    "login": "Log in",
+    "sign-in": "Sign in",
     "sign-up": "Sign up",
     "sign-out": "Sign out",
     "user": "User",
