--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -33,7 +33,7 @@
   },
 
   "auth": {
-    "login": "Войти",
+    "sign-in": "Войти",
     "sign-up": "Регистрация",
     "sign-out": "Выйти",
     "user": "Пользователь",
