--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,7 +29,10 @@
     "schema": "Схема",
     "response": "Ответ",
     "query": "Запрос",
-    "schema-error": "Не удалось получить схему"
+    "schema-error": "Не удалось получить схему",
+    "api": "Поменять API ссылку",
+    "status": "Статус",
+    "history": "История"
   },
 
   "auth": {
