refactor: move playground to pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,8 +22,8 @@
     }
   },
 
-  "studio": {
-    "page": "Studio",
+  "playground": {
+    "page": "Playground",
     "query-var": "Variables",
     "http-head": "Headers",
     "schema": "Schema",
