--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,8 +22,8 @@
     }
   },
 
-  "studio": {
-    "page": "Студия",
+  "playground": {
+    "page": "Плейграуд",
     "query-var": "Переменные",
     "http-head": "Заголовки",
     "schema": "Схема",
